--- a/app/src/main/res/drawable/buttonstyle2.xml
+++ b/app/src/main/res/drawable/buttonstyle2.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#0068a4"  />
-    <corners android:radius="50dp" />
+    <solid android:color="#4267b2"  />
+    <corners android:radius="15dp" />
 
 </shape>
